--- a/bluekart/pages/home.html
+++ b/bluekart/pages/home.html
@@ -1,96 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+        integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
+        crossorigin="anonymous"></script>
     <title>BlueKart</title>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-        <a class="navbar-brand" href="#"><img src="../assets/images/3118563.png" alt="" class="navbar-img"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <a class="navbar-brand" href="../index.html"><img src="../assets/images/3118563.png" alt="" class="navbar-img"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
-      
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                Services
-              </a>
-              <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Purchase</a>
-                <a class="dropdown-item" href="#">Set Up</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Reviews</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
-            </li>
-          </ul>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
+                        aria-expanded="false">
+                        Services
+                    </a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Purchase</a>
+                        <a class="dropdown-item" href="#">Set Up</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Reviews</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact Us</a>
+                </li>
+            </ul>
         </div>
-      </nav>
-      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    </nav>
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../assets/images/_20230717_on_oppenheimer_lead.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Robert.J.Oppenheimer</h5>
-              <p>J. Robert Oppenheimer was an American theoretical physicist who served as the director of the Manhattan Project's Los Alamos Laboratory during World War II.</p>
+            <div class="carousel-item active">
+                <img src="../assets/images/_20230717_on_oppenheimer_lead.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Robert.J.Oppenheimer</h5>
+                    <p>J. Robert Oppenheimer was an American theoretical physicist who served as the director of the
+                        Manhattan Project's Los Alamos Laboratory during World War II.</p>
+                </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/images/rsz_foto_cover_-_alberteinstein.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Albert Einstein</h5>
-              <p>Albert Einstein was a German-born physicist who developed the special and general theories of relativity and won the Nobel Prize for Physics in 1921 for his explanation of the photoelectric effect. Einstein is generally considered the most influential physicist of the 20th century.</p>
+            <div class="carousel-item">
+                <img src="../assets/images/rsz_foto_cover_-_alberteinstein.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Albert Einstein</h5>
+                    <p>Albert Einstein was a German-born physicist who developed the special and general theories of
+                        relativity and won the Nobel Prize for Physics in 1921 for his explanation of the photoelectric
+                        effect. Einstein is generally considered the most influential physicist of the 20th century.</p>
+                </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../assets/images/Nikola_tesla-OCD-1600x840.webp" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Nikola Tesla</h5>
-              <p>Nikola Tesla was a Serbian American inventor and engineer who discovered and patented the rotating magnetic field, the basis of most alternating-current machinery.</p>
+            <div class="carousel-item">
+                <img src="../assets/images/Nikola_tesla-OCD-1600x840.webp" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Nikola Tesla</h5>
+                    <p>Nikola Tesla was a Serbian American inventor and engineer who discovered and patented the
+                        rotating magnetic field, the basis of most alternating-current machinery.</p>
+                </div>
             </div>
-          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
         </button>
-      </div>
+    </div>
     <section class="about-section">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xl-8 col-lg-6 col-md-6 co-sm-12 col-xs-12">
+                <div class="col-xl-7 col-lg-6 col-md-6 co-sm-12 col-xs-12">
                     <div class="about-details">
                         <h3>Welcome to the world of science</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dolores incidunt deserunt deleniti, consequatur aperiam voluptatibus amet explicabo nam facilis iste nihil obcaecati quidem optio, odit facere nemo et in.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dolores incidunt deserunt
+                            deleniti, consequatur aperiam voluptatibus amet explicabo nam facilis iste nihil obcaecati
+                            quidem optio, odit facere nemo et in.</p>
                         <button class="btn btn-success">Join Now</button>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-6 col-md-6 co-sm-12 col-xs-12">
+                <div class="col-xl-5 col-lg-6 col-md-6 co-sm-12 col-xs-12">
                     <div class="abt-img-div">
                         <img src="../assets/images/wp1817999.webp" alt="" class="img-fluid">
                     </div>
@@ -99,11 +116,12 @@
         </div>
     </section>
     <section class="product-section py-5">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row justify-content-center">
-                <div class="col-lg-3 col-md-4 co-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-4 co-sm-6 col-12">
                     <div class="product-div">
-                        <img src="../assets/images/GettyImages-700832601-5bb602c0c9e77c002609fe08.jpg" alt="" class="img-fluid product-img">
+                        <img src="../assets/images/GettyImages-700832601-5bb602c0c9e77c002609fe08.jpg" alt=""
+                            class="img product-img">
                         <div class="product-details px-2">
                             <h5>Silicon</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -111,9 +129,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 co-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-4 co-sm-6 col-12">
                     <div class="product-div">
-                        <img src="../assets/images/R (2).jfif" alt="" class="img-fluid product-img">
+                        <img src="../assets/images/R (2).jfif" alt="" class="img product-img">
                         <div class="product-details px-2">
                             <h5>Uranium</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -121,9 +139,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 co-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-4 co-sm-6 col-12">
                     <div class="product-div">
-                        <img src="../assets/images/OIP (1).jfif" alt="" class="img-fluid product-img">
+                        <img src="../assets/images/OIP (1).jfif" alt="" class="img product-img">
                         <div class="product-details px-2">
                             <h5>Plutonium</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -131,9 +149,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-4 co-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-4 co-sm-6 col-12">
                     <div class="product-div">
-                        <img src="../assets/images/R (3).jfif" alt="" class="img-fluid product-img">
+                        <img src="../assets/images/R (3).jfif" alt="" class="img product-img">
                         <div class="product-details px-2">
                             <h5>Hydrogen</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -145,4 +163,5 @@
         </div>
     </section>
 </body>
+
 </html>
